packages/x8/x8-0.0.1-py3-none-any.whl/x8/ql/generated/VerseQLParser.py
# flake8: noqa
# type: ignore
# Generated from VerseQLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class VerseQLParser(Parser):

    grammarFileName = "VerseQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'AND'",
        "'AS'",
        "'ASC'",
        "'BETWEEN'",
        "'BY'",
        "'COLLECTION'",
        "'DESC'",
        "'END'",
        "'FALSE'",
        "'FROM'",
        "'IN'",
        "'INTO'",
        "'NOT'",
        "'NULL'",
        "'OR'",
        "'ORDER'",
        "'RANK'",
        "'SEARCH'",
        "'SELECT'",
        "'SET'",
        "'TRUE'",
        "'WHERE'",
        "','",
        "'+'",
        "'-'",
        "'*'",
        "'.'",
        "'?'",
        "'<'",
        "'<='",
        "'>'",
        "'>='",
        "'='",
        "<INVALID>",
        "'['",
        "']'",
        "'{'",
        "'}'",
        "'('",
        "')'",
        "':'",
        "';'",
        "'@'",
        "'/'",
    ]

    symbolicNames = [
        "<INVALID>",
        "AND",
        "AS",
        "ASC",
        "BETWEEN",
        "BY",
        "COLLECTION",
        "DESC",
        "END",
        "FALSE",
        "FROM",
        "IN",
        "INTO",
        "NOT",
        "NULL",
        "OR",
        "ORDER",
        "RANK",
        "SEARCH",
        "SELECT",
        "SET",
        "TRUE",
        "WHERE",
        "COMMA",
        "PLUS",
        "MINUS",
        "STAR",
        "DOT",
        "QUESTION_MARK",
        "LT",
        "LT_EQ",
        "GT",
        "GT_EQ",
        "EQ",
        "NEQ",
        "BRACKET_LEFT",
        "BRACKET_RIGHT",
        "BRACE_LEFT",
        "BRACE_RIGHT",
        "PAREN_LEFT",
        "PAREN_RIGHT",
        "COLON",
        "SEMI_COLON",
        "AT",
        "SLASH",
        "LITERAL_STRING_SINGLE",
        "LITERAL_STRING_DOUBLE",
        "LITERAL_INTEGER",
        "LITERAL_DECIMAL",
        "IDENTIFIER",
        "WS",
        "COMMENT_SINGLE_LINE",
        "COMMENT_MULTILINE",
        "UNRECOGNIZED",
    ]

    RULE_identifier = 0
    RULE_parse_statement = 1
    RULE_parse_search = 2
    RULE_parse_where = 3
    RULE_parse_select = 4
    RULE_parse_collection = 5
    RULE_parse_order_by = 6
    RULE_parse_rank_by = 7
    RULE_parse_update = 8
    RULE_statement = 9
    RULE_clause = 10
    RULE_generic_clause = 11
    RULE_select_clause = 12
    RULE_select = 13
    RULE_select_term = 14
    RULE_collection_clause = 15
    RULE_collection = 16
    RULE_search_clause = 17
    RULE_where_clause = 18
    RULE_expression = 19
    RULE_operand = 20
    RULE_order_by_clause = 21
    RULE_order_by = 22
    RULE_order_by_term = 23
    RULE_rank_by_clause = 24
    RULE_set_clause = 25
    RULE_update = 26
    RULE_update_operation = 27
    RULE_function = 28
    RULE_function_args = 29
    RULE_named_arg = 30
    RULE_ref = 31
    RULE_ref_path = 32
    RULE_parameter = 33
    RULE_field = 34
    RULE_field_path = 35
    RULE_field_primitive = 36
    RULE_value = 37
    RULE_literal_string = 38
    RULE_array = 39
    RULE_json = 40
    RULE_json_obj = 41
    RULE_json_pair = 42
    RULE_json_arr = 43
    RULE_json_value = 44
    RULE_json_string = 45
    RULE_json_number = 46

    ruleNames = [
        "identifier",
        "parse_statement",
        "parse_search",
        "parse_where",
        "parse_select",
        "parse_collection",
        "parse_order_by",
        "parse_rank_by",
        "parse_update",
        "statement",
        "clause",
        "generic_clause",
        "select_clause",
        "select",
        "select_term",
        "collection_clause",
        "collection",
        "search_clause",
        "where_clause",
        "expression",
        "operand",
        "order_by_clause",
        "order_by",
        "order_by_term",
        "rank_by_clause",
        "set_clause",
        "update",
        "update_operation",
        "function",
        "function_args",
        "named_arg",
        "ref",
        "ref_path",
        "parameter",
        "field",
        "field_path",
        "field_primitive",
        "value",
        "literal_string",
        "array",
        "json",
        "json_obj",
        "json_pair",
        "json_arr",
        "json_value",
        "json_string",
        "json_number",
    ]

    EOF = Token.EOF
    AND = 1
    AS = 2
    ASC = 3
    BETWEEN = 4
    BY = 5
    COLLECTION = 6
    DESC = 7
    END = 8
    FALSE = 9
    FROM = 10
    IN = 11
    INTO = 12
    NOT = 13
    NULL = 14
    OR = 15
    ORDER = 16
    RANK = 17
    SEARCH = 18
    SELECT = 19
    SET = 20
    TRUE = 21
    WHERE = 22
    COMMA = 23
    PLUS = 24
    MINUS = 25
    STAR = 26
    DOT = 27
    QUESTION_MARK = 28
    LT = 29
    LT_EQ = 30
    GT = 31
    GT_EQ = 32
    EQ = 33
    NEQ = 34
    BRACKET_LEFT = 35
    BRACKET_RIGHT = 36
    BRACE_LEFT = 37
    BRACE_RIGHT = 38
    PAREN_LEFT = 39
    PAREN_RIGHT = 40
    COLON = 41
    SEMI_COLON = 42
    AT = 43
    SLASH = 44
    LITERAL_STRING_SINGLE = 45
    LITERAL_STRING_DOUBLE = 46
    LITERAL_INTEGER = 47
    LITERAL_DECIMAL = 48
    IDENTIFIER = 49
    WS = 50
    COMMENT_SINGLE_LINE = 51
    COMMENT_MULTILINE = 52
    UNRECOGNIZED = 53

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class IdentifierContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(VerseQLParser.IDENTIFIER, 0)

        def SELECT(self):
            return self.getToken(VerseQLParser.SELECT, 0)

        def FROM(self):
            return self.getToken(VerseQLParser.FROM, 0)

        def INTO(self):
            return self.getToken(VerseQLParser.INTO, 0)

        def COLLECTION(self):
            return self.getToken(VerseQLParser.COLLECTION, 0)

        def ORDER(self):
            return self.getToken(VerseQLParser.ORDER, 0)

        def BY(self):
            return self.getToken(VerseQLParser.BY, 0)

        def WHERE(self):
            return self.getToken(VerseQLParser.WHERE, 0)

        def SEARCH(self):
            return self.getToken(VerseQLParser.SEARCH, 0)

        def SET(self):
            return self.getToken(VerseQLParser.SET, 0)

        def ASC(self):
            return self.getToken(VerseQLParser.ASC, 0)

        def DESC(self):
            return self.getToken(VerseQLParser.DESC, 0)

        def RANK(self):
            return self.getToken(VerseQLParser.RANK, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_identifier

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIdentifier"):
                listener.enterIdentifier(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIdentifier"):
                listener.exitIdentifier(self)

    def identifier(self):

        localctx = VerseQLParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_identifier)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not (
                (((_la) & ~0x3F) == 0 and ((1 << _la) & 562949959652584) != 0)
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_statementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(VerseQLParser.StatementContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_statement

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_statement"):
                listener.enterParse_statement(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_statement"):
                listener.exitParse_statement(self)

    def parse_statement(self):

        localctx = VerseQLParser.Parse_statementContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_parse_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.statement()
            self.state = 97
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_searchContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VerseQLParser.ExpressionContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_search

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_search"):
                listener.enterParse_search(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_search"):
                listener.exitParse_search(self)

    def parse_search(self):

        localctx = VerseQLParser.Parse_searchContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 4, self.RULE_parse_search)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.expression(0)
            self.state = 100
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_whereContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VerseQLParser.ExpressionContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_where

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_where"):
                listener.enterParse_where(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_where"):
                listener.exitParse_where(self)

    def parse_where(self):

        localctx = VerseQLParser.Parse_whereContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_parse_where)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.expression(0)
            self.state = 103
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_selectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select(self):
            return self.getTypedRuleContext(VerseQLParser.SelectContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_select

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_select"):
                listener.enterParse_select(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_select"):
                listener.exitParse_select(self)

    def parse_select(self):

        localctx = VerseQLParser.Parse_selectContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_parse_select)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.select()
            self.state = 106
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_collectionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def collection(self):
            return self.getTypedRuleContext(VerseQLParser.CollectionContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_collection

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_collection"):
                listener.enterParse_collection(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_collection"):
                listener.exitParse_collection(self)

    def parse_collection(self):

        localctx = VerseQLParser.Parse_collectionContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 10, self.RULE_parse_collection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.collection()
            self.state = 109
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_order_byContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def order_by(self):
            return self.getTypedRuleContext(VerseQLParser.Order_byContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_order_by

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_order_by"):
                listener.enterParse_order_by(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_order_by"):
                listener.exitParse_order_by(self)

    def parse_order_by(self):

        localctx = VerseQLParser.Parse_order_byContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 12, self.RULE_parse_order_by)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.order_by()
            self.state = 112
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_rank_byContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(VerseQLParser.ExpressionContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_rank_by

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_rank_by"):
                listener.enterParse_rank_by(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_rank_by"):
                listener.exitParse_rank_by(self)

    def parse_rank_by(self):

        localctx = VerseQLParser.Parse_rank_byContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 14, self.RULE_parse_rank_by)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.expression(0)
            self.state = 115
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Parse_updateContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def update(self):
            return self.getTypedRuleContext(VerseQLParser.UpdateContext, 0)

        def EOF(self):
            return self.getToken(VerseQLParser.EOF, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_parse_update

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParse_update"):
                listener.enterParse_update(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParse_update"):
                listener.exitParse_update(self)

    def parse_update(self):

        localctx = VerseQLParser.Parse_updateContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 16, self.RULE_parse_update)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.update()
            self.state = 118
            self.match(VerseQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return VerseQLParser.RULE_statement

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Statement_multiContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a VerseQLParser.StatementContext
            super().__init__(parser)
            self.op = None  # IdentifierContext
            self.copyFrom(ctx)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    VerseQLParser.StatementContext
                )
            else:
                return self.getTypedRuleContext(
                    VerseQLParser.StatementContext, i
                )

        def SEMI_COLON(self, i: int = None):
            if i is None:
                return self.getTokens(VerseQLParser.SEMI_COLON)
            else:
                return self.getToken(VerseQLParser.SEMI_COLON, i)

        def END(self):
            return self.getToken(VerseQLParser.END, 0)

        def identifier(self):
            return self.getTypedRuleContext(VerseQLParser.IdentifierContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement_multi"):
                listener.enterStatement_multi(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement_multi"):
                listener.exitStatement_multi(self)

    class Statement_singleContext(StatementContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a VerseQLParser.StatementContext
            super().__init__(parser)
            self.op = None  # IdentifierContext
            self.copyFrom(ctx)

        def identifier(self):
            return self.getTypedRuleContext(VerseQLParser.IdentifierContext, 0)

        def clause(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(VerseQLParser.ClauseContext)
            else:
                return self.getTypedRuleContext(VerseQLParser.ClauseContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStatement_single"):
                listener.enterStatement_single(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStatement_single"):
                listener.exitStatement_single(self)

    def statement(self):

        localctx = VerseQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        self._la = 0  # Token type
        try:
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                localctx = VerseQLParser.Statement_singleContext(
                    self, localctx
                )
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                localctx.op = self.identifier()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and (
                    (1 << _la) & 562949959652584
                ) != 0:
                    self.state = 121
                    self.clause()
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = VerseQLParser.Statement_multiContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                localctx.op = self.identifier()
                self.state = 128
                self.statement()
                self.state = 129
                self.match(VerseQLParser.SEMI_COLON)
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and (
                    (1 << _la) & 562949959652584
                ) != 0:
                    self.state = 130
                    self.statement()
                    self.state = 131
                    self.match(VerseQLParser.SEMI_COLON)
                    self.state = 137
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 138
                self.match(VerseQLParser.END)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def select_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Select_clauseContext, 0
            )

        def collection_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Collection_clauseContext, 0
            )

        def set_clause(self):
            return self.getTypedRuleContext(VerseQLParser.Set_clauseContext, 0)

        def search_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Search_clauseContext, 0
            )

        def where_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Where_clauseContext, 0
            )

        def order_by_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Order_by_clauseContext, 0
            )

        def rank_by_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Rank_by_clauseContext, 0
            )

        def generic_clause(self):
            return self.getTypedRuleContext(
                VerseQLParser.Generic_clauseContext, 0
            )

        def getRuleIndex(self):
            return VerseQLParser.RULE_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterClause"):
                listener.enterClause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitClause"):
                listener.exitClause(self)

    def clause(self):

        localctx = VerseQLParser.ClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_clause)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.select_clause()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.collection_clause()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.set_clause()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.search_clause()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 146
                self.where_clause()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 147
                self.order_by_clause()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 148
                self.rank_by_clause()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 149
                self.generic_clause()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Generic_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None  # IdentifierContext

        def operand(self):
            return self.getTypedRuleContext(VerseQLParser.OperandContext, 0)

        def identifier(self):
            return self.getTypedRuleContext(VerseQLParser.IdentifierContext, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_generic_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGeneric_clause"):
                listener.enterGeneric_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGeneric_clause"):
                listener.exitGeneric_clause(self)

    def generic_clause(self):

        localctx = VerseQLParser.Generic_clauseContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 22, self.RULE_generic_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            localctx.name = self.identifier()
            self.state = 153
            self.operand()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_clauseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(VerseQLParser.SELECT, 0)

        def select(self):
            return self.getTypedRuleContext(VerseQLParser.SelectContext, 0)

        def getRuleIndex(self):
            return VerseQLParser.RULE_select_clause

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect_clause"):
                listener.enterSelect_clause(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSelect_clause"):
                listener.exitSelect_clause(self)

    def select_clause(self):

        localctx = VerseQLParser.Select_clauseContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 24, self.RULE_select_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(VerseQLParser.SELECT)
            self.state = 156
            self.select()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SelectContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self,
            parser,
            parent: ParserRuleContext = None,
            invokingState: int = -1,
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return VerseQLParser.RULE_select

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Select_parameterContext(SelectContext):

        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a VerseQLParser.SelectContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def parameter(self):
            return self.getTypedRuleContext(VerseQLParser.ParameterContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSelect_parameter"):
                listener.enterSelect_parameter(self)
